# Detoxx

./: .env.example  CODEBASE.md  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
apps/gateway/: package.json  tsconfig.json
apps/gateway/src/: index.ts
apps/gateway/src/adapters/slack/: slackAdapter.ts  slackContextFetcher.ts  slackPayloadNormalizer.ts
apps/gateway/src/adapters/teams/: teamsAdapter.ts  teamsContextFetcher.ts  teamsPayloadNormalizer.ts
apps/gateway/src/config/: index.ts
apps/gateway/src/middleware/: auth.ts  errorHandler.ts
apps/gateway/src/routes/: slack.routes.ts  teams.routes.ts
apps/gateway/src/services/: pipelineClient.ts
apps/gateway/src/unified/: messageBuilder.ts  types.ts
apps/pipeline/: requirements.txt
apps/pipeline/app/: main.py
apps/pipeline/app/api/: router.py  schemas.py
apps/pipeline/app/config/: settings.py
apps/pipeline/app/pipeline/: context_builder.py  executor.py  normalizer.py  postprocessor.py  prompt_builder.py
apps/pipeline/app/prompts/: system_prompt.py
apps/pipeline/app/prompts/templates/: assertive.txt  default.txt  diplomatic.txt
apps/pipeline/app/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  openai_provider.py  openrouter_provider.py
apps/pipeline/tests/: test_normalizer.py  test_prompt_builder.py  test_providers.py
infra/: Dockerfile.gateway  Dockerfile.pipeline  docker-compose.yml
slack-bot/: manifest.yaml
