[project]
name = "detoxx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic==0.72.0",
    "fastapi==0.116.1",
    "google-generativeai==0.8.5",
    "httpx==0.28.1",
    "openai==1.108.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.11.0",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
    "uvicorn==0.35.0",
]
